<resources>
    <string name="app_name">Cetelem</string>
    <string name="title_activity_main">@string/app_name</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="user_login">Login do usuário</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="enter">Entrar</string>
    <string name="user">USER</string>
    <string name="admin">Admin</string>
    <string name="network_not_available">Internet indisponível</string>
    <string name="app">App</string>
    <string name="exit">Sair</string>
    <string name="campos">Campos</string>

    <string name="faca_seu_login">Faça seu login.</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="saudacao_login">Bem-vindo ao Cetelem</string>
    <string name="msg_invalid_field">%1$s é inválido</string>
    <string name="msg_required_field">%1$s é obrigatório</string>
    <string name="usuario">Usuário</string>
    <string name="processo">Processo</string>
    <string name="novo">Novo</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="applicativo">Aplicativo</string>
    <string name="sair">Sair</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="msg_sair_conta">Deseja sair da conta?</string>
    <string name="msg_form_invalido">Verifique os campos inválidos ou obrigatórios!</string>

    <string name="processo_status_rascunho">Rascunho</string>
    <string name="processo_status_aguardando_analise">Aguardando Análise</string>
    <string name="processo_status_em_analise">Em Análise</string>
    <string name="processo_status_pendente">Pendente</string>
    <string name="processo_status_em_acompanhamento">Em Acompanhamento</string>
    <string name="processo_status_concluido">Concluído</string>
    <string name="processo_status_cancelado">Cancelado</string>
    <string name="tipo_processo">Tipo de processo</string>
    <string name="titulo_processo">Processo</string>
    <string name="title_activity_scan">ScanActivity</string>
    <string name="documentos">Documentos</string>

    <string name="action_escanear">Escanear</string>
    <string name="action_fotos">Fotos</string>
    <string name="action_documentos">Documentos</string>
    <string name="msg_required_documents">Informe todos os documetos obrigatórios</string>
    <string name="legenda">Legenda</string>
    <string name="fechar">Fechar</string>
    <string name="ok">OK</string>
    <string name="obrigatorio">Obrigatório</string>
    <string name="opcional">Opcional</string>
    <string name="msg_nao_exibir_novamente">Não exibir novamente</string>
    <string name="action_info">Informação</string>
    <string name="sem_registros_exibir">Sem registros para exibir</string>
    <string name="erro">Erro</string>
    <string name="enviando">Enviando</string>
    <string name="aguardando">Aguardando</string>
    <string name="titulo_pesquisa">Pesquisa</string>
    <string name="atualizar">Atualizar</string>
    <string name="filtro">Filtro</string>
    <string name="procurar">Procurar</string>
    <string name="documento_versao">Versão %1$d</string>
    <string name="msg_min_size_field">%1$s o tamanho mínimo é %2$d</string>
    <string name="msg_max_size_field">%1$s o tamanho máximo é %2$d</string>
    <string name="status_processo_concluido_automatico">Concluído Automaticamente</string>
    <string name="periodo_de">Período de</string>
    <string name="periodo_ate">Período até</string>
    <string name="filtrar">Filtrar</string>
    <string name="numero">Número</string>
    <string name="limpar">Limpar</string>
    <string name="status_processo">Status do processo</string>
    <string name="msg_processo_salvo_sucesso">Processo salvo com sucesso</string>
    <string name="titulo_documentos">Documentos</string>
    <string name="documento_status_incluido">Incluido</string>
    <string name="documento_status_pendente">Pendente</string>
    <string name="documento_status_aprovado">Aprovado</string>
    <string name="documento_status_processando">Processando</string>
    <string name="documento_status_digitalizado">Digitalizado</string>
    <string name="opcionais">Opcionais</string>
    <string name="obrigatorios">Obrigatórios</string>
    <string name="adicionar">Adicionar</string>
    <string name="titulo_documento">Documento</string>
    <string name="excluir">Excluir</string>
    <string name="msg_deseja_excluir_registro">Deseja excluir este registro?</string>
    <string name="msg_erro_digitalizacao">Erro na digitalização</string>
    <string name="falha_digitalizacao">Falha ao digitalizar os documentos deste processo.\nClique aqui.</string>
    <string name="title_erro">Erro</string>
    <string name="data">Data</string>
    <string name="mensagem">Mensagem</string>
    <string name="documento">Documento</string>
    <string name="reenviar">Reenviar</string>
    <string name="msg_processo_enviado">Processo enviado com sucesso</string>
    <string name="msg_processo_reenviado">Processo reenviado com sucesso</string>
    <string name="enviado">Enviado</string>
    <string name="tipificacao">Tipificação</string>
    <string name="msg_imagem_excluida_sucesso">Imagem excluída com sucesso</string>
    <string name="msg_documento_enviado_sucesso">Documento enviado com sucesso</string>
    <string name="processo_status_em_processamento">Em Processamento</string>
    <string name="tentativas">Tentativas</string>
    <string name="abrir">Abrir</string>
    <string name="msg_processo_pendente">Existe uma pendência para este processo!</string>
    <string name="ver">Ver</string>
    <string name="justificar">Justificar</string>
    <string name="justificativa">Justificativa</string>
    <string name="msg_justificativa_sucesso">Justificativa enviada com sucesso</string>
    <string name="msg_documento_reenviado">Documento reenviado com sucesso</string>
    <string name="msg_sem_info_digitalizacao">Não há informações de digitalização</string>
    <string name="msg_editar_processo">Os documentos terão de ser analisados novamente.\nTem certeza que deseja prosseguir?</string>
    <string name="editar">Editar</string>
    <string name="msg_enviar_processo">Deseja enviar este processo?</string>
    <string name="msg_processo_enviado_sucesso">Processo enviado com sucesso</string>
    <string name="msg_processo_reenviado_sucesso">Processo reenviado com sucesso</string>
    <string name="msg_reenviar_processo">Deseja reenviar esse processo?</string>
    <string name="enviar">Enviar</string>

</resources>
