<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/processo">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_plus"
                    android:icon="@drawable/ic_menu_add"
                    android:title="@string/novo" />
                <item
                    android:id="@+id/nav_search"
                    android:icon="@drawable/ic_menu_search"
                    android:title="@string/pesquisar" />
            </group>
        </menu>
    </item>

    <item android:title="@string/applicativo">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_power"
                    android:icon="@drawable/ic_menu_power"
                    android:title="@string/sair" />
            </group>
        </menu>
    </item>

</menu>