<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_padding"
        >
        <ImageView
            android:src="@drawable/ic_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/saudacao_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="?android:textAppearanceLarge"/>
        <TextView
            android:text="@string/faca_seu_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="?android:textAppearanceMedium"
            />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            >
            <EditText
                android:id="@+id/edit_login"
                style="@style/AppTheme.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_person"
                android:drawablePadding="@dimen/default_padding"
                android:drawableTint="@color/editTextColor"
                android:hint="@string/usuario"
                android:inputType="textNoSuggestions"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            >
            <EditText
                android:id="@+id/edit_senha"
                style="@style/AppTheme.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="@dimen/default_padding"
                android:drawableTint="@color/editTextColor"
                android:hint="@string/senha"
                android:inputType="textPassword"
                />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/button_entrar"
            android:text="@string/entrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            style="@style/AppTheme.Button"
            />
    </LinearLayout>
</ScrollView>