<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_padding"
        android:background="@drawable/bg_caption">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filtrar"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/grey_500"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="8dp"/>
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_padding">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin">
                <br.com.wasys.cetelem.widget.AppNumberEditText
                    android:id="@+id/edit_numero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/numero"/>
            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/default_margin">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="8dp">
                    <br.com.wasys.cetelem.widget.AppDateEditText
                        android:id="@+id/edit_inicio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/periodo_de"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="8dp">
                    <br.com.wasys.cetelem.widget.AppDateEditText
                        android:id="@+id/edit_termino"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/periodo_ate"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin">
                <br.com.wasys.library.widget.AppSpinner
                    android:id="@+id/spinner_tipo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tipo_processo"
                    style="@style/AppTheme.EditText" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin">
                <br.com.wasys.library.widget.AppSpinner
                    android:id="@+id/spinner_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/status_processo"
                    style="@style/AppTheme.EditText" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_limpar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/limpar"
            android:textColor="@color/colorAccent"
            style="?android:attr/buttonBarStyle"/>
        <Button
            android:id="@+id/button_filtrar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/filtrar"
            android:textColor="@color/colorPrimary"
            style="?android:attr/buttonBarStyle"/>
    </LinearLayout>
</LinearLayout>